# lore-analist-agent

./: .gitignore  README.md  pyproject.toml  skills-lock.json  streamlit_app.py
src/: __main__.py  configs.py  ingestion.py  logger.py  retriever.py  tools.py
src/agent/: chat.py  core.py  exceptions.py  runner.py
src/models/: google.py
src/prompts/: lore_analyst.py
src/streamlit/: __init__.py  app.py  chat.py  session.py  sidebar.py
src/utils/: hash.py
